feat(localization): add Indonesian translations for interactive elements, overlays, patterns, signatures, and strategy documents
- Implemented comprehensive translations for interactive states, micro-interactions, hover effects, focus navigation, drag and drop, and selection in `interactive.json`.
- Added translations for command palette, cookie consent, back to top button, clipboard actions, dropdowns, and context menus in `overlay.json`.
- Introduced page templates, section patterns, responsive breakpoints, accessibility guidelines, performance guidelines, design tokens, and naming conventions in `patterns.json`.
- Enhanced signature HUD, tactical panel, data stream messages, warning banners, and various content components in `signature.json`.
- Developed voice tone, microcopy guidelines, error messages, formatting standards, and truncation rules in `strategy.json`.

feat(changelog): refactor changelog page to utilize translations for versioning and items

- Updated `ChangelogPage.tsx` to dynamically render version information and items using translation keys.

feat(home): enhance home page with localized content and language switcher

- Refactored `HomePage.tsx` to include localized chapter labels, footer content, and a language switcher component for improved user experience.

--- a/src/locales/en/animation.json
+++ b/src/locales/en/animation.json
@@ -1,1 +1,23 @@
-{}
+{
+  "system": {
+    "title": "Animation System",
+    "description": "Timing functions, durations, and key animation catalog."
+  },
+  "page_transitions": {
+    "title": "Page Transitions",
+    "description": "Cross-fade 300ms. View Transitions API.",
+    "cross_fade_text": "Cross-fade page transition using View Transitions API (300ms duration)."
+  },
+  "scroll_triggered": {
+    "title": "Scroll-Triggered Animations",
+    "description": "Default: fadeInUp at 10% visibility. Stagger: 100ms delay per sibling.",
+    "stagger_label": "STAGGER {{ms}}ms"
+  },
+  "particles": {
+    "title": "Particle & Ambient Effects",
+    "description": "Floating dots opacity 0.1-0.3, slow drift. Hero-section only. Canvas-based.",
+    "ambient_particles": "AMBIENT PARTICLES"
+  },
+  "live_animations": "LIVE ANIMATIONS",
+  "duration_scale": "DURATION SCALE"
+}
